// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Soy Parser should parse all template attributes 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Array [],
      "body": Array [
        Object {
          "content": "call .helper data=\\"all\\" /",
          "mark": Object {
            "end": Object {
              "column": 39,
              "line": 10,
              "offset": 125,
            },
            "start": Object {
              "column": 12,
              "line": 10,
              "offset": 98,
            },
          },
          "type": "Interpolation",
        },
      ],
      "doc": Object {
        "about": "Test",
        "mark": Object {
          "end": Object {
            "column": 1,
            "line": 6,
            "offset": 34,
          },
          "start": Object {
            "column": 1,
            "line": 3,
            "offset": 18,
          },
        },
        "params": Array [],
        "type": "SoyDoc",
      },
      "id": Object {
        "name": "render",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 12,
          "offset": 149,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 18,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 25,
              "line": 7,
              "offset": 77,
            },
            "start": Object {
              "column": 3,
              "line": 7,
              "offset": 55,
            },
          },
          "name": "test",
          "paramType": "string",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
    Object {
      "attributes": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 36,
              "line": 14,
              "offset": 186,
            },
            "start": Object {
              "column": 19,
              "line": 14,
              "offset": 169,
            },
          },
          "name": "kind",
          "type": "Attribute",
          "value": "attributes",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 51,
              "line": 14,
              "offset": 201,
            },
            "start": Object {
              "column": 37,
              "line": 14,
              "offset": 187,
            },
          },
          "name": "private",
          "type": "Attribute",
          "value": "true",
        },
      ],
      "body": Array [
        Object {
          "content": "$test ?: ''",
          "mark": Object {
            "end": Object {
              "column": 23,
              "line": 17,
              "offset": 251,
            },
            "start": Object {
              "column": 10,
              "line": 17,
              "offset": 238,
            },
          },
          "type": "Interpolation",
        },
      ],
      "doc": null,
      "id": Object {
        "name": "helper",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 18,
          "offset": 263,
        },
        "start": Object {
          "column": 1,
          "line": 14,
          "offset": 151,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 25,
              "line": 15,
              "offset": 227,
            },
            "start": Object {
              "column": 3,
              "line": 15,
              "offset": 205,
            },
          },
          "name": "test",
          "paramType": "asdasd",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
    Object {
      "attributes": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 41,
              "line": 20,
              "offset": 305,
            },
            "start": Object {
              "column": 24,
              "line": 20,
              "offset": 288,
            },
          },
          "name": "kind",
          "type": "Attribute",
          "value": "attributes",
        },
      ],
      "body": Array [
        Object {
          "content": "$test ?: ''",
          "mark": Object {
            "end": Object {
              "column": 23,
              "line": 23,
              "offset": 355,
            },
            "start": Object {
              "column": 10,
              "line": 23,
              "offset": 342,
            },
          },
          "type": "Interpolation",
        },
      ],
      "doc": null,
      "id": Object {
        "name": "helperOther",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 24,
          "offset": 367,
        },
        "start": Object {
          "column": 1,
          "line": 20,
          "offset": 265,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 25,
              "line": 21,
              "offset": 331,
            },
            "start": Object {
              "column": 3,
              "line": 21,
              "offset": 309,
            },
          },
          "name": "test",
          "paramType": "asdasd",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
  ],
  "mark": Object {
    "end": Object {
      "column": 1,
      "line": 25,
      "offset": 368,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "namespace": "Test",
  "type": "Program",
}
`;

exports[`Soy Parser should parse deltemplates 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "content": "$title",
          "mark": Object {
            "end": Object {
              "column": 17,
              "line": 12,
              "offset": 166,
            },
            "start": Object {
              "column": 9,
              "line": 12,
              "offset": 158,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "content": "$name",
          "mark": Object {
            "end": Object {
              "column": 16,
              "line": 13,
              "offset": 187,
            },
            "start": Object {
              "column": 9,
              "line": 13,
              "offset": 180,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "body": Array [
            Object {
              "content": "$optionalInfo",
              "mark": Object {
                "end": Object {
                  "column": 25,
                  "line": 16,
                  "offset": 251,
                },
                "start": Object {
                  "column": 10,
                  "line": 16,
                  "offset": 236,
                },
              },
              "type": "Interpolation",
            },
          ],
          "mark": Object {
            "end": Object {
              "column": 10,
              "line": 17,
              "offset": 265,
            },
            "start": Object {
              "column": 5,
              "line": 15,
              "offset": 198,
            },
          },
          "type": "If",
        },
        Object {
          "body": Array [],
          "id": Object {
            "name": "helper",
            "namespace": null,
          },
          "mark": Object {
            "end": Object {
              "column": 5,
              "line": 21,
              "offset": 293,
            },
            "start": Object {
              "column": 5,
              "line": 19,
              "offset": 271,
            },
          },
          "type": "Call",
        },
        Object {
          "body": Array [
            Object {
              "body": Object {
                "mark": Object {
                  "end": Object {
                    "column": 24,
                    "line": 22,
                    "offset": 345,
                  },
                  "start": Object {
                    "column": 19,
                    "line": 22,
                    "offset": 340,
                  },
                },
                "type": "StringLiteral",
                "value": "bar",
              },
              "mark": Object {
                "end": Object {
                  "column": 27,
                  "line": 22,
                  "offset": 348,
                },
                "start": Object {
                  "column": 7,
                  "line": 22,
                  "offset": 328,
                },
              },
              "name": "foo",
              "type": "Param",
            },
          ],
          "id": Object {
            "name": "render",
            "namespace": "OtherComponent",
          },
          "mark": Object {
            "end": Object {
              "column": 3,
              "line": 24,
              "offset": 363,
            },
            "start": Object {
              "column": 5,
              "line": 21,
              "offset": 293,
            },
          },
          "type": "Call",
        },
      ],
      "doc": Object {
        "about": "Test",
        "mark": Object {
          "end": Object {
            "column": 1,
            "line": 6,
            "offset": 34,
          },
          "start": Object {
            "column": 1,
            "line": 3,
            "offset": 18,
          },
        },
        "params": Array [],
        "type": "SoyDoc",
      },
      "id": Object {
        "name": "First",
        "namespace": "Test",
      },
      "mark": Object {
        "end": Object {
          "column": 15,
          "line": 25,
          "offset": 384,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 18,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 24,
              "line": 7,
              "offset": 82,
            },
            "start": Object {
              "column": 3,
              "line": 7,
              "offset": 61,
            },
          },
          "name": "name",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 25,
              "line": 8,
              "offset": 107,
            },
            "start": Object {
              "column": 3,
              "line": 8,
              "offset": 85,
            },
          },
          "name": "title",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 33,
              "line": 9,
              "offset": 140,
            },
            "start": Object {
              "column": 3,
              "line": 9,
              "offset": 110,
            },
          },
          "name": "optionalInfo",
          "paramType": "string",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "DelTemplate",
      "variant": null,
    },
    Object {
      "body": Array [
        Object {
          "content": "$title",
          "mark": Object {
            "end": Object {
              "column": 17,
              "line": 33,
              "offset": 547,
            },
            "start": Object {
              "column": 9,
              "line": 33,
              "offset": 539,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "content": "$name",
          "mark": Object {
            "end": Object {
              "column": 16,
              "line": 34,
              "offset": 568,
            },
            "start": Object {
              "column": 9,
              "line": 34,
              "offset": 561,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "body": Array [
            Object {
              "content": "$optionalInfo",
              "mark": Object {
                "end": Object {
                  "column": 25,
                  "line": 37,
                  "offset": 632,
                },
                "start": Object {
                  "column": 10,
                  "line": 37,
                  "offset": 617,
                },
              },
              "type": "Interpolation",
            },
          ],
          "mark": Object {
            "end": Object {
              "column": 10,
              "line": 38,
              "offset": 646,
            },
            "start": Object {
              "column": 5,
              "line": 36,
              "offset": 579,
            },
          },
          "type": "If",
        },
        Object {
          "body": Array [],
          "id": Object {
            "name": "helper",
            "namespace": null,
          },
          "mark": Object {
            "end": Object {
              "column": 5,
              "line": 42,
              "offset": 674,
            },
            "start": Object {
              "column": 5,
              "line": 40,
              "offset": 652,
            },
          },
          "type": "Call",
        },
        Object {
          "body": Array [
            Object {
              "body": Object {
                "mark": Object {
                  "end": Object {
                    "column": 24,
                    "line": 43,
                    "offset": 726,
                  },
                  "start": Object {
                    "column": 19,
                    "line": 43,
                    "offset": 721,
                  },
                },
                "type": "StringLiteral",
                "value": "bar",
              },
              "mark": Object {
                "end": Object {
                  "column": 27,
                  "line": 43,
                  "offset": 729,
                },
                "start": Object {
                  "column": 7,
                  "line": 43,
                  "offset": 709,
                },
              },
              "name": "foo",
              "type": "Param",
            },
          ],
          "id": Object {
            "name": "render",
            "namespace": "OtherComponent",
          },
          "mark": Object {
            "end": Object {
              "column": 3,
              "line": 45,
              "offset": 744,
            },
            "start": Object {
              "column": 5,
              "line": 42,
              "offset": 674,
            },
          },
          "type": "Call",
        },
      ],
      "doc": null,
      "id": Object {
        "name": "Second",
        "namespace": "Othernamespace",
      },
      "mark": Object {
        "end": Object {
          "column": 15,
          "line": 46,
          "offset": 765,
        },
        "start": Object {
          "column": 1,
          "line": 27,
          "offset": 386,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 24,
              "line": 28,
              "offset": 463,
            },
            "start": Object {
              "column": 3,
              "line": 28,
              "offset": 442,
            },
          },
          "name": "name",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 25,
              "line": 29,
              "offset": 488,
            },
            "start": Object {
              "column": 3,
              "line": 29,
              "offset": 466,
            },
          },
          "name": "title",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 33,
              "line": 30,
              "offset": 521,
            },
            "start": Object {
              "column": 3,
              "line": 30,
              "offset": 491,
            },
          },
          "name": "optionalInfo",
          "paramType": "string",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "DelTemplate",
      "variant": Object {
        "content": "'neato'",
        "mark": Object {
          "end": Object {
            "column": 53,
            "line": 27,
            "offset": 438,
          },
          "start": Object {
            "column": 44,
            "line": 27,
            "offset": 429,
          },
        },
        "type": "Interpolation",
      },
    },
  ],
  "mark": Object {
    "end": Object {
      "column": 1,
      "line": 47,
      "offset": 766,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "namespace": "Test",
  "type": "Program",
}
`;

exports[`Soy Parser should parse file correctly 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Array [],
      "body": Array [
        Object {
          "content": "$title",
          "mark": Object {
            "end": Object {
              "column": 17,
              "line": 12,
              "offset": 160,
            },
            "start": Object {
              "column": 9,
              "line": 12,
              "offset": 152,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "content": "$name",
          "mark": Object {
            "end": Object {
              "column": 16,
              "line": 13,
              "offset": 181,
            },
            "start": Object {
              "column": 9,
              "line": 13,
              "offset": 174,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "body": Array [
            Object {
              "content": "$optionalInfo",
              "mark": Object {
                "end": Object {
                  "column": 25,
                  "line": 16,
                  "offset": 245,
                },
                "start": Object {
                  "column": 10,
                  "line": 16,
                  "offset": 230,
                },
              },
              "type": "Interpolation",
            },
          ],
          "mark": Object {
            "end": Object {
              "column": 10,
              "line": 17,
              "offset": 259,
            },
            "start": Object {
              "column": 5,
              "line": 15,
              "offset": 192,
            },
          },
          "type": "If",
        },
        Object {
          "body": Array [],
          "id": Object {
            "name": "helper",
            "namespace": null,
          },
          "mark": Object {
            "end": Object {
              "column": 5,
              "line": 21,
              "offset": 287,
            },
            "start": Object {
              "column": 5,
              "line": 19,
              "offset": 265,
            },
          },
          "type": "Call",
        },
        Object {
          "body": Array [
            Object {
              "body": Object {
                "mark": Object {
                  "end": Object {
                    "column": 24,
                    "line": 22,
                    "offset": 339,
                  },
                  "start": Object {
                    "column": 19,
                    "line": 22,
                    "offset": 334,
                  },
                },
                "type": "StringLiteral",
                "value": "bar",
              },
              "mark": Object {
                "end": Object {
                  "column": 27,
                  "line": 22,
                  "offset": 342,
                },
                "start": Object {
                  "column": 7,
                  "line": 22,
                  "offset": 322,
                },
              },
              "name": "foo",
              "type": "Param",
            },
          ],
          "id": Object {
            "name": "render",
            "namespace": "OtherComponent",
          },
          "mark": Object {
            "end": Object {
              "column": 3,
              "line": 24,
              "offset": 357,
            },
            "start": Object {
              "column": 5,
              "line": 21,
              "offset": 287,
            },
          },
          "type": "Call",
        },
      ],
      "doc": Object {
        "about": "Test",
        "mark": Object {
          "end": Object {
            "column": 1,
            "line": 6,
            "offset": 34,
          },
          "start": Object {
            "column": 1,
            "line": 3,
            "offset": 18,
          },
        },
        "params": Array [],
        "type": "SoyDoc",
      },
      "id": Object {
        "name": "render",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 25,
          "offset": 375,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 18,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 24,
              "line": 7,
              "offset": 76,
            },
            "start": Object {
              "column": 3,
              "line": 7,
              "offset": 55,
            },
          },
          "name": "name",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 25,
              "line": 8,
              "offset": 101,
            },
            "start": Object {
              "column": 3,
              "line": 8,
              "offset": 79,
            },
          },
          "name": "title",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 33,
              "line": 9,
              "offset": 134,
            },
            "start": Object {
              "column": 3,
              "line": 9,
              "offset": 104,
            },
          },
          "name": "optionalInfo",
          "paramType": "string",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
    Object {
      "attributes": Array [],
      "body": Array [],
      "doc": null,
      "id": Object {
        "name": "helper",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 30,
          "offset": 452,
        },
        "start": Object {
          "column": 1,
          "line": 27,
          "offset": 377,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 25,
              "line": 28,
              "offset": 420,
            },
            "start": Object {
              "column": 3,
              "line": 28,
              "offset": 398,
            },
          },
          "name": "test",
          "paramType": "asdasd",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
  ],
  "mark": Object {
    "end": Object {
      "column": 1,
      "line": 31,
      "offset": 453,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "namespace": "Test",
  "type": "Program",
}
`;

exports[`Soy Parser should parse let statements in params 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Array [],
      "body": Array [
        Object {
          "body": Object {
            "mark": Object {
              "end": Object {
                "column": 17,
                "line": 7,
                "offset": 69,
              },
              "start": Object {
                "column": 16,
                "line": 7,
                "offset": 68,
              },
            },
            "type": "NumberLiteral",
            "value": 3,
          },
          "mark": Object {
            "end": Object {
              "column": 20,
              "line": 7,
              "offset": 72,
            },
            "start": Object {
              "column": 3,
              "line": 7,
              "offset": 55,
            },
          },
          "name": "count",
          "type": "LetStatement",
        },
        Object {
          "body": Object {
            "mark": Object {
              "end": Object {
                "column": 19,
                "line": 8,
                "offset": 91,
              },
              "start": Object {
                "column": 15,
                "line": 8,
                "offset": 87,
              },
            },
            "type": "BooleanLiteral",
            "value": true,
          },
          "mark": Object {
            "end": Object {
              "column": 22,
              "line": 8,
              "offset": 94,
            },
            "start": Object {
              "column": 3,
              "line": 8,
              "offset": 75,
            },
          },
          "name": "show",
          "type": "LetStatement",
        },
        Object {
          "body": Array [],
          "mark": Object {
            "end": Object {
              "column": 9,
              "line": 12,
              "offset": 149,
            },
            "start": Object {
              "column": 3,
              "line": 10,
              "offset": 98,
            },
          },
          "name": "content",
          "type": "LetStatement",
        },
        Object {
          "body": Object {
            "items": Array [
              Object {
                "key": Object {
                  "mark": Object {
                    "end": Object {
                      "column": 10,
                      "line": 15,
                      "offset": 177,
                    },
                    "start": Object {
                      "column": 5,
                      "line": 15,
                      "offset": 172,
                    },
                  },
                  "type": "StringLiteral",
                  "value": "foo",
                },
                "mark": Object {
                  "end": Object {
                    "column": 20,
                    "line": 15,
                    "offset": 187,
                  },
                  "start": Object {
                    "column": 5,
                    "line": 15,
                    "offset": 172,
                  },
                },
                "type": "MapItem",
                "value": Object {
                  "mark": Object {
                    "end": Object {
                      "column": 19,
                      "line": 15,
                      "offset": 186,
                    },
                    "start": Object {
                      "column": 12,
                      "line": 15,
                      "offset": 179,
                    },
                  },
                  "type": "StringLiteral",
                  "value": "neato",
                },
              },
              Object {
                "key": Object {
                  "mark": Object {
                    "end": Object {
                      "column": 13,
                      "line": 16,
                      "offset": 200,
                    },
                    "start": Object {
                      "column": 5,
                      "line": 16,
                      "offset": 192,
                    },
                  },
                  "type": "StringLiteral",
                  "value": "asdasd",
                },
                "mark": Object {
                  "end": Object {
                    "column": 4,
                    "line": 17,
                    "offset": 209,
                  },
                  "start": Object {
                    "column": 5,
                    "line": 16,
                    "offset": 192,
                  },
                },
                "type": "MapItem",
                "value": Object {
                  "content": "asd",
                  "mark": Object {
                    "end": Object {
                      "column": 18,
                      "line": 16,
                      "offset": 205,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 16,
                      "offset": 202,
                    },
                  },
                  "type": "OtherExpression",
                },
              },
            ],
            "mark": Object {
              "end": Object {
                "column": 5,
                "line": 17,
                "offset": 210,
              },
              "start": Object {
                "column": 16,
                "line": 14,
                "offset": 166,
              },
            },
            "type": "MapLiteral",
          },
          "mark": Object {
            "end": Object {
              "column": 7,
              "line": 17,
              "offset": 212,
            },
            "start": Object {
              "column": 3,
              "line": 14,
              "offset": 153,
            },
          },
          "name": "myMap",
          "type": "LetStatement",
        },
        Object {
          "body": Object {
            "mark": Object {
              "end": Object {
                "column": 20,
                "line": 18,
                "offset": 232,
              },
              "start": Object {
                "column": 15,
                "line": 18,
                "offset": 227,
              },
            },
            "type": "StringLiteral",
            "value": "foo",
          },
          "mark": Object {
            "end": Object {
              "column": 23,
              "line": 18,
              "offset": 235,
            },
            "start": Object {
              "column": 3,
              "line": 18,
              "offset": 215,
            },
          },
          "name": "name",
          "type": "LetStatement",
        },
        Object {
          "body": Object {
            "condition": Object {
              "body": Array [
                Object {
                  "mark": Object {
                    "end": Object {
                      "column": 34,
                      "line": 20,
                      "offset": 270,
                    },
                    "start": Object {
                      "column": 29,
                      "line": 20,
                      "offset": 265,
                    },
                  },
                  "name": "name",
                  "type": "Reference",
                },
              ],
              "mark": Object {
                "end": Object {
                  "column": 35,
                  "line": 20,
                  "offset": 271,
                },
                "start": Object {
                  "column": 19,
                  "line": 20,
                  "offset": 255,
                },
              },
              "name": "isNonnull",
              "type": "FunctionCall",
            },
            "left": Object {
              "mark": Object {
                "end": Object {
                  "column": 43,
                  "line": 20,
                  "offset": 279,
                },
                "start": Object {
                  "column": 38,
                  "line": 20,
                  "offset": 274,
                },
              },
              "name": "name",
              "type": "Reference",
            },
            "mark": Object {
              "end": Object {
                "column": 56,
                "line": 20,
                "offset": 292,
              },
              "start": Object {
                "column": 19,
                "line": 20,
                "offset": 255,
              },
            },
            "right": Object {
              "mark": Object {
                "end": Object {
                  "column": 56,
                  "line": 20,
                  "offset": 292,
                },
                "start": Object {
                  "column": 46,
                  "line": 20,
                  "offset": 282,
                },
              },
              "type": "StringLiteral",
              "value": "mthadley",
            },
            "type": "Ternary",
          },
          "mark": Object {
            "end": Object {
              "column": 59,
              "line": 20,
              "offset": 295,
            },
            "start": Object {
              "column": 3,
              "line": 20,
              "offset": 239,
            },
          },
          "name": "coolName",
          "type": "LetStatement",
        },
        Object {
          "body": Object {
            "body": Array [
              Object {
                "mark": Object {
                  "end": Object {
                    "column": 34,
                    "line": 21,
                    "offset": 329,
                  },
                  "start": Object {
                    "column": 29,
                    "line": 21,
                    "offset": 324,
                  },
                },
                "name": "name",
                "type": "Reference",
              },
            ],
            "mark": Object {
              "end": Object {
                "column": 35,
                "line": 21,
                "offset": 330,
              },
              "start": Object {
                "column": 19,
                "line": 21,
                "offset": 314,
              },
            },
            "name": "isNonnull",
            "type": "FunctionCall",
          },
          "mark": Object {
            "end": Object {
              "column": 38,
              "line": 21,
              "offset": 333,
            },
            "start": Object {
              "column": 3,
              "line": 21,
              "offset": 298,
            },
          },
          "name": "coolName",
          "type": "LetStatement",
        },
        Object {
          "body": Object {
            "content": "asd",
            "mark": Object {
              "end": Object {
                "column": 25,
                "line": 23,
                "offset": 359,
              },
              "start": Object {
                "column": 22,
                "line": 23,
                "offset": 356,
              },
            },
            "type": "OtherExpression",
          },
          "mark": Object {
            "end": Object {
              "column": 28,
              "line": 23,
              "offset": 362,
            },
            "start": Object {
              "column": 3,
              "line": 23,
              "offset": 337,
            },
          },
          "name": "whatIsThis",
          "type": "LetStatement",
        },
        Object {
          "body": Object {
            "content": "$myMap.foo",
            "mark": Object {
              "end": Object {
                "column": 30,
                "line": 25,
                "offset": 393,
              },
              "start": Object {
                "column": 20,
                "line": 25,
                "offset": 383,
              },
            },
            "type": "OtherExpression",
          },
          "mark": Object {
            "end": Object {
              "column": 33,
              "line": 25,
              "offset": 396,
            },
            "start": Object {
              "column": 3,
              "line": 25,
              "offset": 366,
            },
          },
          "name": "someThing",
          "type": "LetStatement",
        },
      ],
      "doc": Object {
        "about": "Test",
        "mark": Object {
          "end": Object {
            "column": 1,
            "line": 6,
            "offset": 34,
          },
          "start": Object {
            "column": 1,
            "line": 3,
            "offset": 18,
          },
        },
        "params": Array [],
        "type": "SoyDoc",
      },
      "id": Object {
        "name": "render",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 30,
          "offset": 451,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 18,
        },
      },
      "params": Array [],
      "type": "Template",
    },
  ],
  "mark": Object {
    "end": Object {
      "column": 1,
      "line": 31,
      "offset": 452,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "namespace": "Test",
  "type": "Program",
}
`;

exports[`Soy Parser should parse maps in params 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Array [],
      "body": Array [
        Object {
          "body": Array [
            Object {
              "body": Object {
                "mark": Object {
                  "end": Object {
                    "column": 24,
                    "line": 9,
                    "offset": 117,
                  },
                  "start": Object {
                    "column": 19,
                    "line": 9,
                    "offset": 112,
                  },
                },
                "type": "StringLiteral",
                "value": "bar",
              },
              "mark": Object {
                "end": Object {
                  "column": 27,
                  "line": 9,
                  "offset": 120,
                },
                "start": Object {
                  "column": 7,
                  "line": 9,
                  "offset": 100,
                },
              },
              "name": "foo",
              "type": "Param",
            },
            Object {
              "body": Object {
                "items": Array [
                  Object {
                    "key": Object {
                      "mark": Object {
                        "end": Object {
                          "column": 15,
                          "line": 11,
                          "offset": 157,
                        },
                        "start": Object {
                          "column": 9,
                          "line": 11,
                          "offset": 151,
                        },
                      },
                      "type": "StringLiteral",
                      "value": "biff",
                    },
                    "mark": Object {
                      "end": Object {
                        "column": 24,
                        "line": 11,
                        "offset": 166,
                      },
                      "start": Object {
                        "column": 9,
                        "line": 11,
                        "offset": 151,
                      },
                    },
                    "type": "MapItem",
                    "value": Object {
                      "mark": Object {
                        "end": Object {
                          "column": 23,
                          "line": 11,
                          "offset": 165,
                        },
                        "start": Object {
                          "column": 17,
                          "line": 11,
                          "offset": 159,
                        },
                      },
                      "type": "StringLiteral",
                      "value": "boof",
                    },
                  },
                  Object {
                    "key": Object {
                      "mark": Object {
                        "end": Object {
                          "column": 15,
                          "line": 12,
                          "offset": 181,
                        },
                        "start": Object {
                          "column": 9,
                          "line": 12,
                          "offset": 175,
                        },
                      },
                      "type": "StringLiteral",
                      "value": "bong",
                    },
                    "mark": Object {
                      "end": Object {
                        "column": 19,
                        "line": 12,
                        "offset": 185,
                      },
                      "start": Object {
                        "column": 9,
                        "line": 12,
                        "offset": 175,
                      },
                    },
                    "type": "MapItem",
                    "value": Object {
                      "mark": Object {
                        "end": Object {
                          "column": 18,
                          "line": 12,
                          "offset": 184,
                        },
                        "start": Object {
                          "column": 17,
                          "line": 12,
                          "offset": 183,
                        },
                      },
                      "type": "NumberLiteral",
                      "value": 3,
                    },
                  },
                  Object {
                    "key": Object {
                      "mark": Object {
                        "end": Object {
                          "column": 15,
                          "line": 13,
                          "offset": 200,
                        },
                        "start": Object {
                          "column": 9,
                          "line": 13,
                          "offset": 194,
                        },
                      },
                      "type": "StringLiteral",
                      "value": "bing",
                    },
                    "mark": Object {
                      "end": Object {
                        "column": 8,
                        "line": 14,
                        "offset": 214,
                      },
                      "start": Object {
                        "column": 9,
                        "line": 13,
                        "offset": 194,
                      },
                    },
                    "type": "MapItem",
                    "value": Object {
                      "mark": Object {
                        "end": Object {
                          "column": 21,
                          "line": 13,
                          "offset": 206,
                        },
                        "start": Object {
                          "column": 17,
                          "line": 13,
                          "offset": 202,
                        },
                      },
                      "type": "BooleanLiteral",
                      "value": true,
                    },
                  },
                ],
                "mark": Object {
                  "end": Object {
                    "column": 9,
                    "line": 14,
                    "offset": 215,
                  },
                  "start": Object {
                    "column": 21,
                    "line": 10,
                    "offset": 141,
                  },
                },
                "type": "MapLiteral",
              },
              "mark": Object {
                "end": Object {
                  "column": 11,
                  "line": 14,
                  "offset": 217,
                },
                "start": Object {
                  "column": 7,
                  "line": 10,
                  "offset": 127,
                },
              },
              "name": "myMap",
              "type": "Param",
            },
            Object {
              "body": Object {
                "mark": Object {
                  "end": Object {
                    "column": 25,
                    "line": 15,
                    "offset": 242,
                  },
                  "start": Object {
                    "column": 19,
                    "line": 15,
                    "offset": 236,
                  },
                },
                "type": "StringLiteral",
                "value": "buzz",
              },
              "mark": Object {
                "end": Object {
                  "column": 28,
                  "line": 15,
                  "offset": 245,
                },
                "start": Object {
                  "column": 7,
                  "line": 15,
                  "offset": 224,
                },
              },
              "name": "biz",
              "type": "Param",
            },
          ],
          "id": Object {
            "name": "render",
            "namespace": "OtherComponent",
          },
          "mark": Object {
            "end": Object {
              "column": 3,
              "line": 17,
              "offset": 260,
            },
            "start": Object {
              "column": 5,
              "line": 8,
              "offset": 65,
            },
          },
          "type": "Call",
        },
      ],
      "doc": Object {
        "about": "Test",
        "mark": Object {
          "end": Object {
            "column": 1,
            "line": 6,
            "offset": 34,
          },
          "start": Object {
            "column": 1,
            "line": 3,
            "offset": 18,
          },
        },
        "params": Array [],
        "type": "SoyDoc",
      },
      "id": Object {
        "name": "render",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 18,
          "offset": 278,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 18,
        },
      },
      "params": Array [],
      "type": "Template",
    },
  ],
  "mark": Object {
    "end": Object {
      "column": 1,
      "line": 19,
      "offset": 279,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "namespace": "Test",
  "type": "Program",
}
`;

exports[`Soy Parser should parse nested calls 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Array [],
      "body": Array [
        Object {
          "content": "$title",
          "mark": Object {
            "end": Object {
              "column": 17,
              "line": 12,
              "offset": 160,
            },
            "start": Object {
              "column": 9,
              "line": 12,
              "offset": 152,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "content": "$name",
          "mark": Object {
            "end": Object {
              "column": 16,
              "line": 13,
              "offset": 181,
            },
            "start": Object {
              "column": 9,
              "line": 13,
              "offset": 174,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "body": Array [
            Object {
              "content": "$optionalInfo",
              "mark": Object {
                "end": Object {
                  "column": 25,
                  "line": 16,
                  "offset": 245,
                },
                "start": Object {
                  "column": 10,
                  "line": 16,
                  "offset": 230,
                },
              },
              "type": "Interpolation",
            },
          ],
          "mark": Object {
            "end": Object {
              "column": 10,
              "line": 17,
              "offset": 259,
            },
            "start": Object {
              "column": 5,
              "line": 15,
              "offset": 192,
            },
          },
          "type": "If",
        },
        Object {
          "body": Array [
            Object {
              "content": "$name",
              "mark": Object {
                "end": Object {
                  "column": 17,
                  "line": 20,
                  "offset": 310,
                },
                "start": Object {
                  "column": 10,
                  "line": 20,
                  "offset": 303,
                },
              },
              "type": "Interpolation",
            },
            Object {
              "content": "$title",
              "mark": Object {
                "end": Object {
                  "column": 18,
                  "line": 22,
                  "offset": 345,
                },
                "start": Object {
                  "column": 10,
                  "line": 22,
                  "offset": 337,
                },
              },
              "type": "Interpolation",
            },
          ],
          "mark": Object {
            "end": Object {
              "column": 10,
              "line": 25,
              "offset": 389,
            },
            "start": Object {
              "column": 5,
              "line": 19,
              "offset": 265,
            },
          },
          "type": "If",
        },
        Object {
          "body": Array [
            Object {
              "body": Object {
                "mark": Object {
                  "end": Object {
                    "column": 24,
                    "line": 28,
                    "offset": 447,
                  },
                  "start": Object {
                    "column": 19,
                    "line": 28,
                    "offset": 442,
                  },
                },
                "type": "StringLiteral",
                "value": "bar",
              },
              "mark": Object {
                "end": Object {
                  "column": 27,
                  "line": 28,
                  "offset": 450,
                },
                "start": Object {
                  "column": 7,
                  "line": 28,
                  "offset": 430,
                },
              },
              "name": "foo",
              "type": "Param",
            },
            Object {
              "body": Array [
                Object {
                  "body": Array [],
                  "id": Object {
                    "name": "helper",
                    "namespace": null,
                  },
                  "mark": Object {
                    "end": Object {
                      "column": 9,
                      "line": 31,
                      "offset": 518,
                    },
                    "start": Object {
                      "column": 9,
                      "line": 30,
                      "offset": 493,
                    },
                  },
                  "type": "Call",
                },
                Object {
                  "body": Array [],
                  "id": Object {
                    "name": "helper",
                    "namespace": null,
                  },
                  "mark": Object {
                    "end": Object {
                      "column": 7,
                      "line": 32,
                      "offset": 541,
                    },
                    "start": Object {
                      "column": 9,
                      "line": 31,
                      "offset": 518,
                    },
                  },
                  "type": "Call",
                },
              ],
              "mark": Object {
                "end": Object {
                  "column": 15,
                  "line": 32,
                  "offset": 549,
                },
                "start": Object {
                  "column": 7,
                  "line": 29,
                  "offset": 457,
                },
              },
              "name": "content",
              "type": "Param",
            },
          ],
          "id": Object {
            "name": "render",
            "namespace": "OtherComponent",
          },
          "mark": Object {
            "end": Object {
              "column": 5,
              "line": 35,
              "offset": 567,
            },
            "start": Object {
              "column": 5,
              "line": 27,
              "offset": 395,
            },
          },
          "type": "Call",
        },
        Object {
          "body": Array [],
          "id": Object {
            "name": "helper",
            "namespace": null,
          },
          "mark": Object {
            "end": Object {
              "column": 3,
              "line": 36,
              "offset": 586,
            },
            "start": Object {
              "column": 5,
              "line": 35,
              "offset": 567,
            },
          },
          "type": "Call",
        },
      ],
      "doc": Object {
        "about": "Test",
        "mark": Object {
          "end": Object {
            "column": 1,
            "line": 6,
            "offset": 34,
          },
          "start": Object {
            "column": 1,
            "line": 3,
            "offset": 18,
          },
        },
        "params": Array [],
        "type": "SoyDoc",
      },
      "id": Object {
        "name": "render",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 37,
          "offset": 604,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 18,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 24,
              "line": 7,
              "offset": 76,
            },
            "start": Object {
              "column": 3,
              "line": 7,
              "offset": 55,
            },
          },
          "name": "name",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 25,
              "line": 8,
              "offset": 101,
            },
            "start": Object {
              "column": 3,
              "line": 8,
              "offset": 79,
            },
          },
          "name": "title",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 33,
              "line": 9,
              "offset": 134,
            },
            "start": Object {
              "column": 3,
              "line": 9,
              "offset": 104,
            },
          },
          "name": "optionalInfo",
          "paramType": "string",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
    Object {
      "attributes": Array [],
      "body": Array [],
      "doc": null,
      "id": Object {
        "name": "helper",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 42,
          "offset": 681,
        },
        "start": Object {
          "column": 1,
          "line": 39,
          "offset": 606,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 25,
              "line": 40,
              "offset": 649,
            },
            "start": Object {
              "column": 3,
              "line": 40,
              "offset": 627,
            },
          },
          "name": "test",
          "paramType": "asdasd",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
  ],
  "mark": Object {
    "end": Object {
      "column": 1,
      "line": 43,
      "offset": 682,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "namespace": "Test",
  "type": "Program",
}
`;

exports[`Soy Parser should parse param declarations 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Array [],
      "body": Array [
        Object {
          "body": Array [
            Object {
              "content": "$title",
              "mark": Object {
                "end": Object {
                  "column": 19,
                  "line": 17,
                  "offset": 268,
                },
                "start": Object {
                  "column": 11,
                  "line": 17,
                  "offset": 260,
                },
              },
              "type": "Interpolation",
            },
          ],
          "mark": Object {
            "end": Object {
              "column": 15,
              "line": 18,
              "offset": 288,
            },
            "start": Object {
              "column": 5,
              "line": 16,
              "offset": 222,
            },
          },
          "type": "Foreach",
        },
        Object {
          "content": "$name",
          "mark": Object {
            "end": Object {
              "column": 16,
              "line": 20,
              "offset": 305,
            },
            "start": Object {
              "column": 9,
              "line": 20,
              "offset": 298,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "body": Array [
            Object {
              "content": "$optionalInfo",
              "mark": Object {
                "end": Object {
                  "column": 25,
                  "line": 23,
                  "offset": 369,
                },
                "start": Object {
                  "column": 10,
                  "line": 23,
                  "offset": 354,
                },
              },
              "type": "Interpolation",
            },
          ],
          "mark": Object {
            "end": Object {
              "column": 10,
              "line": 24,
              "offset": 383,
            },
            "start": Object {
              "column": 5,
              "line": 22,
              "offset": 316,
            },
          },
          "type": "If",
        },
      ],
      "doc": Object {
        "about": "Test",
        "mark": Object {
          "end": Object {
            "column": 1,
            "line": 6,
            "offset": 34,
          },
          "start": Object {
            "column": 1,
            "line": 3,
            "offset": 18,
          },
        },
        "params": Array [],
        "type": "SoyDoc",
      },
      "id": Object {
        "name": "render",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 26,
          "offset": 404,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 18,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 24,
              "line": 7,
              "offset": 76,
            },
            "start": Object {
              "column": 3,
              "line": 7,
              "offset": 55,
            },
          },
          "name": "name",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 5,
              "line": 11,
              "offset": 138,
            },
            "start": Object {
              "column": 3,
              "line": 8,
              "offset": 79,
            },
          },
          "name": "someRecord",
          "paramType": "[
    name: string,
    count: int
  ]",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 32,
              "line": 12,
              "offset": 170,
            },
            "start": Object {
              "column": 3,
              "line": 12,
              "offset": 141,
            },
          },
          "name": "titles",
          "paramType": "list<string>",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 38,
              "line": 13,
              "offset": 208,
            },
            "start": Object {
              "column": 3,
              "line": 13,
              "offset": 173,
            },
          },
          "name": "optionalInfo",
          "paramType": "html|string",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
  ],
  "mark": Object {
    "end": Object {
      "column": 1,
      "line": 27,
      "offset": 405,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "namespace": "Test",
  "type": "Program",
}
`;

exports[`Soy Parser should parse param names with underscores 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Array [],
      "body": Array [
        Object {
          "content": "$_name",
          "mark": Object {
            "end": Object {
              "column": 17,
              "line": 10,
              "offset": 126,
            },
            "start": Object {
              "column": 9,
              "line": 10,
              "offset": 118,
            },
          },
          "type": "Interpolation",
        },
      ],
      "doc": Object {
        "about": "UnderscoreParam",
        "mark": Object {
          "end": Object {
            "column": 1,
            "line": 6,
            "offset": 56,
          },
          "start": Object {
            "column": 1,
            "line": 3,
            "offset": 29,
          },
        },
        "params": Array [],
        "type": "SoyDoc",
      },
      "id": Object {
        "name": "render",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 13,
          "offset": 153,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 29,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 26,
              "line": 7,
              "offset": 100,
            },
            "start": Object {
              "column": 3,
              "line": 7,
              "offset": 77,
            },
          },
          "name": "_name",
          "paramType": "string",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
  ],
  "mark": Object {
    "end": Object {
      "column": 1,
      "line": 14,
      "offset": 154,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "namespace": "UnderscoreParam",
  "type": "Program",
}
`;

exports[`Soy Parser should parse private templates 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Array [],
      "body": Array [
        Object {
          "content": "$title",
          "mark": Object {
            "end": Object {
              "column": 17,
              "line": 11,
              "offset": 127,
            },
            "start": Object {
              "column": 9,
              "line": 11,
              "offset": 119,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "content": "$name",
          "mark": Object {
            "end": Object {
              "column": 16,
              "line": 12,
              "offset": 148,
            },
            "start": Object {
              "column": 9,
              "line": 12,
              "offset": 141,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "body": Array [],
          "id": Object {
            "name": "helper",
            "namespace": null,
          },
          "mark": Object {
            "end": Object {
              "column": 3,
              "line": 15,
              "offset": 178,
            },
            "start": Object {
              "column": 5,
              "line": 14,
              "offset": 159,
            },
          },
          "type": "Call",
        },
      ],
      "doc": Object {
        "about": "Test",
        "mark": Object {
          "end": Object {
            "column": 1,
            "line": 6,
            "offset": 34,
          },
          "start": Object {
            "column": 1,
            "line": 3,
            "offset": 18,
          },
        },
        "params": Array [],
        "type": "SoyDoc",
      },
      "id": Object {
        "name": "render",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 16,
          "offset": 196,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 18,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 24,
              "line": 7,
              "offset": 76,
            },
            "start": Object {
              "column": 3,
              "line": 7,
              "offset": 55,
            },
          },
          "name": "name",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
        Object {
          "mark": Object {
            "end": Object {
              "column": 25,
              "line": 8,
              "offset": 101,
            },
            "start": Object {
              "column": 3,
              "line": 8,
              "offset": 79,
            },
          },
          "name": "title",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
    Object {
      "attributes": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 33,
              "line": 18,
              "offset": 230,
            },
            "start": Object {
              "column": 19,
              "line": 18,
              "offset": 216,
            },
          },
          "name": "private",
          "type": "Attribute",
          "value": "true",
        },
      ],
      "body": Array [
        Object {
          "content": "$test ?: ''",
          "mark": Object {
            "end": Object {
              "column": 29,
              "line": 20,
              "offset": 285,
            },
            "start": Object {
              "column": 16,
              "line": 20,
              "offset": 272,
            },
          },
          "type": "Interpolation",
        },
      ],
      "doc": null,
      "id": Object {
        "name": "helper",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 21,
          "offset": 303,
        },
        "start": Object {
          "column": 1,
          "line": 18,
          "offset": 198,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 25,
              "line": 19,
              "offset": 256,
            },
            "start": Object {
              "column": 3,
              "line": 19,
              "offset": 234,
            },
          },
          "name": "test",
          "paramType": "asdasd",
          "required": false,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
  ],
  "mark": Object {
    "end": Object {
      "column": 1,
      "line": 22,
      "offset": 304,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "namespace": "Test",
  "type": "Program",
}
`;

exports[`Soy Parser should parse template docs 1`] = `
Object {
  "body": Array [
    Object {
      "attributes": Array [],
      "body": Array [
        Object {
          "content": "$name",
          "mark": Object {
            "end": Object {
              "column": 16,
              "line": 11,
              "offset": 115,
            },
            "start": Object {
              "column": 9,
              "line": 11,
              "offset": 108,
            },
          },
          "type": "Interpolation",
        },
        Object {
          "content": "$age",
          "mark": Object {
            "end": Object {
              "column": 15,
              "line": 12,
              "offset": 135,
            },
            "start": Object {
              "column": 9,
              "line": 12,
              "offset": 129,
            },
          },
          "type": "Interpolation",
        },
      ],
      "doc": Object {
        "about": "Test",
        "mark": Object {
          "end": Object {
            "column": 1,
            "line": 7,
            "offset": 48,
          },
          "start": Object {
            "column": 1,
            "line": 3,
            "offset": 18,
          },
        },
        "params": Array [
          Object {
            "mark": Object {
              "end": Object {
                "column": 2,
                "line": 6,
                "offset": 45,
              },
              "start": Object {
                "column": 1,
                "line": 5,
                "offset": 30,
              },
            },
            "name": "age",
            "paramType": "any",
            "required": true,
            "type": "ParamDeclaration",
          },
        ],
        "type": "SoyDoc",
      },
      "id": Object {
        "name": "render",
        "namespace": null,
      },
      "mark": Object {
        "end": Object {
          "column": 12,
          "line": 14,
          "offset": 161,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 18,
        },
      },
      "params": Array [
        Object {
          "mark": Object {
            "end": Object {
              "column": 24,
              "line": 8,
              "offset": 90,
            },
            "start": Object {
              "column": 3,
              "line": 8,
              "offset": 69,
            },
          },
          "name": "name",
          "paramType": "string",
          "required": true,
          "type": "ParamDeclaration",
        },
      ],
      "type": "Template",
    },
  ],
  "mark": Object {
    "end": Object {
      "column": 1,
      "line": 15,
      "offset": 162,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "namespace": "Test",
  "type": "Program",
}
`;
